[project]
name = "agent"
version = "0.1.0"
description = "Main chat agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.36.2",
    "huggingface-hub[mcp]>=0.32.0",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.3.4",
    "langgraph>=0.5.2",
    "langgraph-api>=0.2.92",
    "langgraph-cli[inmem]>=0.3.3",
    "langgraph-sdk>=0.1.72",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
